<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
        android:id="@+id/ndk_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_android_ndk_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/download_android_ndk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/download_android_ndk"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/inflate_layout"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf" />

        <Button
            android:id="@+id/import_android_ndk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/import_android_ndk"
            android:textSize="10sp"/>
    </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/import_ndk_path_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/import_ndk_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/import_android_ndk_hint" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/import_ndk_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <Button
            android:id="@+id/request_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/request_permission"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|right">

            <Button
                android:id="@+id/launch_ide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cide"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>